--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Ludum Dare 56.sln"
+    "dotnet.defaultSolution": "Ludum-Dare-56.sln"
 }
